---
sidebar: sidebar 
permalink: release-notes/whats-new-9161.html 
keywords: 'what"s new, release notes, 9.16.1, asa r2, asa a1k, asa a90, asa a70' 
summary: Scopri le nuove funzionalità disponibili in ONTAP 9.16,1 per i sistemi ASA R2. 
---
= Novità di ONTAP 9.16,1 per i sistemi ASA R2
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ../media/


[role="lead"]
Scopri le nuove funzionalità disponibili in ONTAP 9.16,1 per i sistemi ASA R2.



== Protezione dei dati

[cols="2,4"]
|===
| Aggiornare | Descrizione 


| link:../data-protection/manage-consistency-groups.html["Supporto di gruppi di coerenza gerarchici"] | I gruppi di coerenza gerarchici consentono di creare un gruppo di coerenza di origine che contiene più gruppi di coerenza child. In questo modo, si semplificano la protezione e la gestione dei dati per strutture di dati complesse. 
|===


== Efficienza dello storage

[cols="2,4"]
|===
| Aggiornare | Descrizione 


| Supporto del ribilanciamento automatico delle unità storage | ONTAP ribilancierà automaticamente le unità storage in tutte le zone di disponibilità dello storage per performance e utilizzo ottimale della capacità. 


| Deallocazione dello spazio NVMe abilitata per impostazione predefinita  a| 
Per impostazione predefinita, la dislocazione dello spazio (denominata anche "hole punzoning" e "unmap") è abilitata per gli spazi dei nomi NVMe. La deallocazione dello spazio consente a un host di disallocare blocchi non utilizzati dagli spazi dei nomi per recuperare spazio.

Questo migliora notevolmente l'efficienza complessiva dello storage, in particolare con file system che hanno un turnover di dati elevato.

|===