@@ -29,6 +29,17 @@ Scopri le nuove funzionalità disponibili in ONTAP 9.16,1 per i sistemi ASA R2.
 |===
 
 
+== Supporto del protocollo
+
+[cols="2,4"]
+|===
+| Aggiornare | Descrizione 
+
+
+| link:../get-started/learn-about.html["Supporto NVMe per multipathing Active/Active simmetrico"] | NVMe/FC e NVMe/TCP ora supportano l'architettura Active-Active simmetrica per il multipathing, in modo che tutti i percorsi tra gli host e lo storage siano Active/ottimizzati. 
+|===
+
+
 == Efficienza dello storage
 
 [cols="2,4"]
